--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Thu Jan  8 11:25:02 PM JST 2026
+Thu Jan  8 11:35:02 PM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 40.328 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 41.747 ms
 Testing download speed................................................................................
-Download: 149.97 Mbit/s
+Download: 62.78 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 33.13 Mbit/s
+Upload: 33.41 Mbit/s
