--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 12:10:02 AM JST 2026
+Fri Jan  9 12:15:02 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Nearoute Limited (Tokyo) [0.91 km]: 37.516 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 40.646 ms
 Testing download speed................................................................................
-Download: 130.60 Mbit/s
+Download: 36.83 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 13.34 Mbit/s
+Upload: 30.17 Mbit/s
