--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 01:05:06 AM JST 2026
+Fri Jan  9 01:10:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 43.242 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 39.372 ms
 Testing download speed................................................................................
-Download: 109.36 Mbit/s
+Download: 52.18 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 29.79 Mbit/s
+Upload: 35.82 Mbit/s
