--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan  9 01:40:06 AM JST 2026
+Fri Jan  9 01:45:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 36.324 ms
+Hosted by Nearoute Limited (Tokyo) [0.91 km]: 42.598 ms
 Testing download speed................................................................................
-Download: 61.94 Mbit/s
+Download: 55.96 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 21.72 Mbit/s
+Upload: 3.57 Mbit/s
