--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 03:25:06 AM JST 2026
+Fri Jan  9 03:35:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 40.246 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 40.237 ms
 Testing download speed................................................................................
-Download: 21.61 Mbit/s
+Download: 120.62 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 30.89 Mbit/s
+Upload: 38.71 Mbit/s
