--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 03:35:06 AM JST 2026
+Fri Jan  9 03:40:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 40.237 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 33.401 ms
 Testing download speed................................................................................
-Download: 120.62 Mbit/s
+Download: 76.42 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 38.71 Mbit/s
+Upload: 31.94 Mbit/s
