--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 04:20:06 AM JST 2026
+Fri Jan  9 04:25:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Contabo (Tokyo) [0.91 km]: 48.67 ms
+Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 36.532 ms
 Testing download speed................................................................................
-Download: 78.30 Mbit/s
+Download: 112.10 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 19.47 Mbit/s
+Upload: 37.73 Mbit/s
