--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 04:55:06 AM JST 2026
+Fri Jan  9 05:10:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by Rakuten Mobile, Inc (Tokyo) [0.91 km]: 34.315 ms
+Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 41.059 ms
 Testing download speed................................................................................
-Download: 129.38 Mbit/s
+Download: 29.34 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 38.70 Mbit/s
+Upload: 38.21 Mbit/s
