--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 05:20:05 AM JST 2026
+Fri Jan  9 05:25:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by GSL Networks (Tokyo) [0.91 km]: 47.032 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 33.441 ms
 Testing download speed................................................................................
-Download: 176.90 Mbit/s
+Download: 101.42 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 38.37 Mbit/s
+Upload: 33.61 Mbit/s
