--- a/speedtest.2
+++ b/speedtest.2
@@ -1,10 +1,10 @@
-Fri Jan  9 05:35:05 AM JST 2026
+Fri Jan  9 05:40:03 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 36.155 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 41.966 ms
 Testing download speed................................................................................
-Download: 54.52 Mbit/s
+Download: 108.97 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 37.79 Mbit/s
+Upload: 25.31 Mbit/s
