--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 06:45:05 AM JST 2026
+Fri Jan  9 06:50:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (211.7.97.164)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 42.198 ms
+Hosted by Contabo (Tokyo) [0.91 km]: 36.561 ms
 Testing download speed................................................................................
-Download: 57.71 Mbit/s
+Download: 91.37 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.36 Mbit/s
+Upload: 30.14 Mbit/s
