--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 07:05:08 AM JST 2026
+Fri Jan  9 07:10:05 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.48.97)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by IPA CyberLab (Bunkyo) [6.02 km]: 43.718 ms
+Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 35.263 ms
 Testing download speed................................................................................
-Download: 73.02 Mbit/s
+Download: 73.70 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 34.45 Mbit/s
+Upload: 36.91 Mbit/s
