--- a/speedtest.1
+++ b/speedtest.1
@@ -1,10 +1,10 @@
-Fri Jan  9 07:15:05 AM JST 2026
+Fri Jan  9 07:20:06 AM JST 2026
 Retrieving speedtest.net configuration...
 Testing from Rakuten Mobile Network (133.106.48.97)...
 Retrieving speedtest.net server list...
 Selecting best server based on ping...
-Hosted by SoftEther Corporation (Tsukuba) [51.14 km]: 35.594 ms
+Hosted by IPA CyberLab 400G (Tokyo) [5.83 km]: 42.724 ms
 Testing download speed................................................................................
-Download: 49.07 Mbit/s
+Download: 201.16 Mbit/s
 Testing upload speed......................................................................................................
-Upload: 37.20 Mbit/s
+Upload: 35.75 Mbit/s
